fix(companion): a document cannot be a size that takes the game down
Same shape as yesterday's pan: a value driven straight from the interface
into arithmetic with nothing bounding it. The grid and the pixels per
frame were each range-limited in their own field and their product was
not, and the renderer allocates width by height as ARGB. Sixty four
frames square at 2048 pixels each is 131072 by 131072, which is 68GB.
The failure is an OutOfMemoryError, so it does not take the editor down,
it takes the game down.

That is the worst case the interface offers without anyone doing anything
unusual. It is also reachable past those limits, because ImGui treats a
drag field's range as a soft one and a control click types straight
through it, which is a gesture this mod's own tooltips teach.

Capped at eight thousand pixels square, which is 64 frames at map
resolution or 16 frames square at four times the detail, both far beyond
anything the grid recommender suggests. That costs 256MB rather than
everything.

The product is computed in longs. As ints a big enough grid comes back
negative, and a negative image size fails much further away with a
complaint nobody could trace to a number they typed. Both halves are
checked separately: computing in ints fails the tests on its own.

The interface clamps and reports rather than letting the constructor
throw, because throwing mid-frame takes out the panel rather than the
edit, and the refusal has its own line rather than borrowing the render
failure's. Nothing failed to render; the document is exactly as it was
and the request was the problem, and "Render failed" would send someone
looking in the wrong place.

Validated: 569 tests, 5 new. Confirmed by dropping the cap and,
separately, by doing the multiplication in ints.